--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,8 +5,8 @@
       <nav id="navbar" class="navbar navbar-light navbar-expand-sm {% if site.navbar_fixed %}fixed-top{% else %}sticky-top{% endif %}">
         <div class="container">
           {% if page.permalink != '/' -%}
-          <a class="navbar-brand title font-weight-lighter" href="{{ site.baseurl }}/">
-            {%- if site.title == "blank" -%}
+          <!-- <a class="navbar-brand title font-weight-lighter" href="{{ site.baseurl }}/"> -->
+            <!-- {%- if site.title == "blank" -%}
               {%- if site.first_name -%}
                 <span class="font-weight-bold">{{- site.first_name -}}&nbsp;</span>
               {%- endif -%}
@@ -19,7 +19,7 @@
             {%- else -%}
               {{- site.title -}}
             {%- endif -%}
-          </a>
+          <!-- </a> -->
           {%- elsif site.enable_navbar_social -%}
           <!-- Social Icons -->
           <div class="navbar-brand social">
