--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -7,6 +7,10 @@ body {
   color: var(--global-text-color);
   background-color: var(--global-bg-color);
 
+  h1, h2, h3 {
+    scroll-margin-top: 66px;
+    font-family: "Roboto Mono";
+  }
   h1, h2, h3, h4, h5, h6 {
     scroll-margin-top: 66px;
   }
