--- a/_sass/_themes.scss
+++ b/_sass/_themes.scss
@@ -3,18 +3,18 @@
  ******************************************************************************/
  
 :root {
-  --global-bg-color: #{$white-color};
+  --global-bg-color: #{$mjms-bg};
   --global-code-bg-color: #{$code-bg-color-light};
   --global-text-color: #{$black-color};
   --global-text-color-light: #{$grey-color};
-  --global-theme-color: #{$marina-highlight};
-  --global-hover-color: #{$purple-color};
+  --global-theme-color: #{$mjms-contrast};
+  --global-hover-color: #{$mjms-hover};
   --global-footer-bg-color: #{$grey-color-dark};
   --global-footer-text-color: #{$grey-color-light};
   --global-footer-link-color: #{$white-color};
   --global-distill-app-color: #{$grey-color};
   --global-divider-color: rgba(0,0,0,.1);
-  --global-card-bg-color: #{$white-color};
+  --global-card-bg-color: #{$mjms-card};
 
   .fa-sun {
     display : none;
